--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,6 +6,14 @@
   "useMarkdownLinks": true,
   "showUnsupportedFiles": true,
   "attachmentFolderPath": "./assets",
-  "defaultViewMode": "source",
-  "newLinkFormat": "relative"
+  "defaultViewMode": "preview",
+  "newLinkFormat": "relative",
+  "pdfExportSettings": {
+    "includeName": false,
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  },
+  "userIgnoreFilters": null
 }
