--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -15,5 +15,6 @@
     "margin": "0",
     "downscalePercent": 100
   },
-  "userIgnoreFilters": null
+  "userIgnoreFilters": null,
+  "spellcheck": false
 }
