--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,15 +6,14 @@
   "useMarkdownLinks": true,
   "showUnsupportedFiles": true,
   "attachmentFolderPath": "./assets",
-  "defaultViewMode": "preview",
+  "defaultViewMode": "source",
   "newLinkFormat": "relative",
   "pdfExportSettings": {
-    "includeName": false,
+    "includeName": true,
     "pageSize": "A4",
     "landscape": false,
     "margin": "0",
     "downscalePercent": 100
   },
-  "userIgnoreFilters": null,
-  "spellcheck": false
+  "userIgnoreFilters": null
 }
